# agent-team

./: .cursorrules  .env.example  .gitignore  ACTION_PLAN.md  Dockerfile  README.md  compose.yaml  pyproject.toml
doc/: architecture.md
doc/ADR/: 0001-use-docker-and-uv.md  0002-dynamic-dependency-management-in-docker.md  0003-adopt-pytest.md  0004-consider-langchain-langgraph.md
doc/dev-log/: 2026-02-11.md  2026-02-12.md
doc/diagrams/: agent_interaction_sequence.md
doc/post-mortems/: 2026-02-11-api-quota-abuse.md
doc/templates/: adr-template.md  post-mortem-template.md
scripts/: check_models.py  test_api_connection.py
src/: main.py
src/agent/: __init__.py  agent.py  architect.py  coder.py  manager.py
src/tests/agent/: test_agent.py  test_architect.py  test_coder.py  test_manager.py
